--- a/Ceylangiyim.WebUI/Views/Shared/Components/Header/Default.cshtml
+++ b/Ceylangiyim.WebUI/Views/Shared/Components/Header/Default.cshtml
@@ -51,6 +51,9 @@
                                 <a class="search-btn nav-search search-trigger" href="#"><i class="fas fa-search"></i></a>
                             </li>
 
+
+
+
                             <li class="login-btn">
                                 <a href="javascript:void(0);" id="loginDropdownBtn"><i class="far fa-user"></i></a>
                                 <!-- Dropdown Menu -->
@@ -62,6 +65,7 @@
                                             <li><a href="/MyAddresses/Index">Kayıtlı Adreslerim</a></li>
                                             <li><a href="/Account/MyOrders">Siparişlerim</a></li>
                                             <li><a href="/MyAddresses/Index">Yorumlarım</a></li>
+                                            <li><a href="/Favorites/Index">Favorilerim</a></li>
                                             @if (User.IsInRole("Admin"))
                                             {
                                                 <li><a href="/Admin">Admin Paneline Git</a></li>
