--- a/Ceylangiyim.WebUI/Areas/admin/Views/Products/Create.cshtml
+++ b/Ceylangiyim.WebUI/Areas/admin/Views/Products/Create.cshtml
@@ -48,6 +48,11 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="Color" class="control-label"></label>
+                <input asp-for="Color" class="form-control" />
+                <span asp-validation-for="Color" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.CategoryId"></select>
             </div>
@@ -149,4 +154,6 @@
 <div>
     <a asp-action="Index" class="btn btn-outline-dark">Listeye Dön</a>
 </div>
+
+
 
