--- a/Ceylangiyim.WebUI/Areas/admin/Views/Shared/_SolMenu.cshtml
+++ b/Ceylangiyim.WebUI/Areas/admin/Views/Shared/_SolMenu.cshtml
@@ -47,6 +47,10 @@
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-cart-shopping"></i></div>
                     Siparişler
                 </a>
+                <a class="nav-link" href="/Admin/Coupons">
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-cart-shopping"></i></div>
+                    Kuponlar
+                </a>
                 
                 
             </div>
