--- a/Ceylangiyim.WebUI/Views/Products/Details.cshtml
+++ b/Ceylangiyim.WebUI/Views/Products/Details.cshtml
@@ -61,7 +61,9 @@
             <div class="details-cat mb-20">
                 <a href="#">@Model.Product.Category.Name</a>
             </div>
+            
             <h2 class="pro-details-title mb-15">@Model.Product.Name</h2>
+            
             <div class="details-price mb-20">
                 @if(Model.Product.DiscountRate > 0)
                 {
@@ -75,28 +77,11 @@
 
                
             </div>
-            <div class="product-variant">
-
-                <div class="product-color variant-item">
-                    <div class="variant-name">
-                        <span>Renkler</span>
-                    </div>
-                    <ul class="shop-link shop-color">
-                        <li><a href="shop.html"><span class="blue"></span></a></li>
-                        <li><a href="shop.html"><span class="green"></span> </a></li>
-                        <li><a href="shop.html"><span class="orange"></span> </a></li>
-                        <li><a href="shop.html"><span class="navy"></span> </a></li>
-                        <li><a href="shop.html"><span class="pinkish"></span> </a></li>
-                        <li><a href="shop.html"><span class="vista"></span> </a></li>
-                    </ul>
-                </div>
-
-               
+            <div class="product-variant"> 
 
                 <div class="product-desc variant-item">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                        @Model.Product.Description
                     </p>
                 </div>
 
@@ -111,15 +96,43 @@
                         else{
                             <li><span>Stock:</span> <span class="in-stock">Stokta yok</span></li>
                         }
+                        <li><span>Renk:</span>@Model.Product.Color</li>
+
                     </ul>
                 </div>
 
                 <div class="product-action-details variant-item">
                     <div class="product-details-action">
-                        <form method="post" asp-action="Add" asp-controller="Favorites">
+                        <div class="product-color variant-item">
+                            <div class="variant-name">
+                                <span>Diğer Renk Seçenekleri</span>
+                            </div>
+                            @if (Model.Product.ProductColors != null && Model.Product.ProductColors.Any())
+                            {
+                                <ul class="shop-link shop-color d-flex flex-wrap">
+                                    @foreach (var color in Model.Product.ProductColors)
+                                    {
+                                        <li class="m-1">
+                                            <a href="@color.RedirectUrl">
+                                                <img src="@color.ImageUrl" alt="@color.ColorName"
+                                                     style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 1px solid #ddd;">
+                                            </a>
+                                        </li>
+                                    }
+                                </ul>
+                            }
+                            else
+                            {
+                                <p>Diğer Renk Seçenekleri Mevcut Değil</p>
+                            }
+                        </div>
+
+
+                        @* <form method="post" asp-action="Add" asp-controller="Favorites">
                             <input type="hidden" name="ProductId" value="@Model.Product.Id" />
                             <button class="details-action-icon" type="submit"><i class="fas fa-heart"></i></button>
-                        </form>
+                        </form> *@
+
                         <form method="post" asp-action="Add" asp-controller="Cart">
                             <input type="hidden" name="ProductId" value="@Model.Product.Id" />
 
@@ -156,6 +169,8 @@
             </div>
         </div>
     </div>
+
+
 </div>
 
 <!-- Related items section-->
@@ -171,10 +186,7 @@
     </div>
 </section>
 
-<style>
 
-
-</style>
 
 <!-- Favicon  -->
 <!-- Favicon  -->
